# sample-dagster

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Justfile  README_TRINO.md  dagster.yaml  main.py  pyproject.toml
ci/: build-args.txt  credentials.yml.example  generate-cosign-keys.sh  pipeline.yml  set-pipeline.sh
sample_dagster/: __init__.py  resources.py
src/sample_dagster/: __init__.py  assets.py  definitions.py
src/sample_dagster/defs/: constants.py
src/sample_dagster/defs/assets/: __init__.py  cleaned_data.py  enriched_data.py  raw_data.py  sales_metrics.py
src/sample_dagster/defs/io_managers/: __init__.py  trino_io_manager.py
