[project]
name = "sample-dagster"
version = "0.1.0"
description = "Dagster sample project with assets and jobs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12",
    "dagster-duckdb>=0.23",
    "pandas",
]

dynamic = []

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.12.10",
    "dagster-webserver>=1.12.10",
    "ruff>=0.14.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = []

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" =  "pyproject.toml" }
packages = ["src/sample_dagster"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "sample_dagster"
registry_modules = [
    "sample_dagster.components.*",
]
